# custom-highlight

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
plaintext/: Cargo.toml  binding.gyp  grammar.js  package.json
plaintext/bindings/node/: binding.cc  index.js
plaintext/bindings/rust/: lib.rs
plaintext/src/: grammar.json  node-types.json  parser.c
src/: main.rs  render.rs
