[package]
name = "custom-highlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.6"
tree-sitter-highlight = "0.20.1"
tree-sitter-urcl = { git = "https://github.com/Terrain2/tree-sitter-urcl" }
tree-sitter-ursl = { git = "https://github.com/Terrain2/tree-sitter-ursl" }
tree-sitter-hexagn = { git = "https://github.com/emm312/tree-sitter-hexagn" }
tree-sitter-phinix = { git = "https://github.com/Terrain2/tree-sitter-phinix" }

image = "0.24.2"
rusttype = "0.9.2"
hex-literal = "0.3.4"
lazy_static = "1.4.0"
const_format = "0.2.24"
unicode-normalization = "0.1.19"
non-empty-vec = "0.2.3"
owoify_rs = "1.0.0"

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = [ # default except framework, standard_framework
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "rustls_backend",
]

[dependencies.tokio]
version = "1.19.2"
features = [ "full" ]